<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tu_chemnitz.tibitometit.optimizer.AddTask">

    <ImageView
        android:contentDescription="@string/task_default"
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/not_imp_urg"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/imageview_bg"
        android:outlineProvider="bounds"
        android:id="@+id/ivTaskPic" />

    <EditText
        android:hint="@string/task_default"
        android:textSize="30sp"
        android:maxLines="2"
        android:maxWidth="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ivTaskPic"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/etTaskName"
        android:textDirection="firstStrongLtr"
        android:textStyle="bold"
        />


    <TextView
        android:text="@string/task_desc_string"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:id="@+id/tvDescription"
        android:layout_below="@+id/ivTaskPic"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:maxWidth="250dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_alignTop="@+id/tvDescription"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/tvDescription"
        android:id="@+id/mltDescription" />

    <TextView
        android:text="@string/task_deadline_string"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDeadline"
        android:layout_below="@+id/tvDescription"
        android:layout_alignEnd="@+id/tvDescription"
        android:layout_marginTop="60dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:ems="10"
        android:layout_toEndOf="@+id/tvDeadline"
        android:layout_marginStart="60dp"
        android:layout_below="@+id/mltDescription"
        android:layout_alignParentStart="@+id/tvDeadline"
        android:layout_alignParentEnd="true"
        android:id="@+id/etDate"
        android:layout_marginTop="30dp"
        android:text=""/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:focusable="false"
        android:clickable="true"
        android:layout_below="@+id/etDate"
        android:layout_alignParentEnd="true"
        android:id="@+id/etTime" />

    <TextView
        android:text="@string/task_category_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/tvCategory"
        android:layout_below="@+id/tvDeadline"
        android:layout_alignEnd="@+id/tvDescription"
        android:layout_marginTop="65dp"/>

    <RadioGroup
        android:id="@+id/rgCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTime"
        android:layout_alignStart="@+id/etTime"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
            <RadioButton
                android:text="@string/task_important_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbtnICategory"
                android:checked="true"
                android:layout_margin="2dp"/>

            <RadioButton
                android:text="@string/task_not_important_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:id="@+id/rbtnNICategory"
                android:layout_margin="2dp"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showDividers="middle"
        android:layout_below="@+id/rgCategory"
        android:layout_alignStart="@+id/mltDescription"
        android:layout_marginTop="10dp">
        <Button
            android:text="@string/add_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:padding="2dp"/>
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""
        android:textColor="@color/error_color"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/rgCategory"
        android:layout_centerHorizontal="true"
        android:id="@+id/etErrorMessage" />

</RelativeLayout>
